--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,7 @@
     background-repeat: no-repeat;
     width: 110px;
     height: 100%;
-    background-image: url("../../Image/asset\ 1.svg")!important;
+    background-image: url("Image/asset\ 1.svg");
 }
 
 .anc {
@@ -60,8 +60,4 @@ a {
     font-size: 16px;
     color: #002f34;
 }
-.crd:hover{
-cursor: pointer;
-background-color: rgb(243, 239, 239);
 
-}
